# pixi-build-backends

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md  lefthook.yaml  mkdocs.yml  pixi.toml
.github/: renovate.json5
.github/workflows/: build-upload.yml  docs.yml  lint-test.yml  lint.yml  pre-commit.yml  python-bindigs.yml  python-bindings.yml  rattler-build.yml  ros-build.yml  rust.yml  testsuite.yml
backends/pixi-build-ros/: pixi.toml  pyproject.toml  robostack.yaml
backends/pixi-build-ros/src/pixi_build_ros/: build_script.py  config.py  distro.py  metadata_provider.py  ros_generator.py  utils.py
backends/pixi-build-ros/templates/: bld_ament_python.bat  build_ament_cmake.sh  build_ament_python.sh
backends/pixi-build-ros/tests/: conftest.py  test_distro_detection.py  test_meta_data_provider.py  test_package_map.py  test_package_xml.py  test_spec_merging.py  test_version_constraints.py
backends/pixi-build-ros/tests/__snapshots__/: test_package_xml.ambr  test_version_constraints.ambr
backends/pixi-build-ros/tests/data/: other_package_map.yaml
backends/pixi-build-ros/tests/data/package_xmls/: custom_ros.xml  version_constraints.xml  version_constraints_double_package_map_entry.xml  version_constraints_wrong.xml
backends/pixi-build-ros/tests/data/pixi_test/: pixi.toml
crates/pixi-build-pyext/: Cargo.toml  pixi.toml
crates/pixi-build-pyext/src/: config.rs  protocol.rs  rattler_build.rs
crates/pixi-build-r/: Cargo.toml  README.md  collect_system_requirements.py  system_requirements_cache.json  validate_against_feedstocks.py
crates/pixi-build-r/license_mapping/: cran_license_mapper.py
crates/pixi-build-r/src/: build_script.j2  config.rs  main.rs  metadata.rs
crates/pixi-build-r/src/snapshots/: pixi_build_r__build_script__tests__build_script@unix-native-no-extra-args.snap  pixi_build_r__build_script__tests__build_script@unix-native-with-extra-args.snap  pixi_build_r__build_script__tests__build_script@unix-pure-no-extra-args.snap  pixi_build_r__build_script__tests__build_script@unix-pure-with-extra-args.snap  pixi_build_r__build_script__tests__build_script@windows-native-no-extra-args.snap  pixi_build_r__build_script__tests__build_script@windows-native-with-extra-args.snap  pixi_build_r__tests__pure_r_package_no_compilers.snap  pixi_build_r__tests__r_package_with_dependencies.snap  pixi_build_r__tests__r_package_with_native_code.snap
crates/pixi-build-rust/: Cargo.toml  pixi.toml
crates/pixi-build-rust/src/: build_script.j2  build_script.rs  config.rs  main.rs  metadata.rs  protocol.rs  rust.rs
crates/pixi-build-rust/src/snapshots/: pixi_build_rust__build_script__test__build_script.snap  pixi_build_rust__build_script__test__build_script@bash.snap  pixi_build_rust__build_script__test__build_script@cmdexe.snap  pixi_build_rust__build_script__test__openssl.snap  pixi_build_rust__build_script__test__openssl@bash.snap  pixi_build_rust__build_script__test__openssl@cmdexe.snap  pixi_build_rust__build_script__test__python_extensions@bash.snap  pixi_build_rust__build_script__test__python_extensions@cmdexe.snap  pixi_build_rust__build_script__test__sccache.snap  pixi_build_rust__build_script__test__sccache@bash.snap  pixi_build_rust__build_script__test__sccache@cmdexe.snap  pixi_build_rust__rust__tests__generate_rust_recipe_from_project_model.snap.new  pixi_build_rust__rust__tests__rust_is_in_build_requirements.snap  pixi_build_rust__rust__tests__setting_host_and_build_requirements-2.snap  pixi_build_rust__rust__tests__setting_host_and_build_requirements.snap  pixi_build_rust__tests__env_vars_are_set.snap  pixi_build_rust__tests__rust_is_in_build_requirements.snap  pixi_build_rust__tests__rust_is_not_added_if_already_present.snap  pixi_build_rust__tests__rust_is_not_added_if_already_present.snap.new  pixi_build_rust__tests__sccache_is_enabled.snap
crates/pixi-build-zig/: Cargo.toml
crates/pixi-build-zig/src/: build_script.j2  build_script.rs  config.rs  main.rs
crates/pixi-build-zig/src/snapshots/: pixi_build_zig__build_script__test__build_script@bash.snap  pixi_build_zig__build_script__test__build_script@cmdexe.snap  pixi_build_zig__build_script__test__build_script_with_extra_args@bash.snap  pixi_build_zig__build_script__test__build_script_with_extra_args@cmdexe.snap  pixi_build_zig__tests__env_vars_are_set.snap  pixi_build_zig__tests__zig_is_in_build_requirements.snap
docs/: index.md
py-pixi-build-backend/: Cargo.toml  example.py  pixi.toml  pyproject.toml
py-pixi-build-backend/examples/pixi-build-python/: pyproject.toml
py-pixi-build-backend/examples/pixi-build-python/pixi_build_python/: build_script.py  main.py  python_generator.py  utils.py
py-pixi-build-backend/pixi_build_backend/: __init__.py  logging.py  main.py
py-pixi-build-backend/pixi_build_backend/types/: __init__.py  entry_points.py  generated_recipe.py  intermediate_recipe.py  metadata_provider.py  platform.py  project_model.py  python_params.py
py-pixi-build-backend/src/: error.rs  lib.rs  logging.rs
py-pixi-build-backend/src/cli/: mod.rs
py-pixi-build-backend/src/recipe_stage0/: conditional.rs  mod.rs  recipe.rs  utils.rs
py-pixi-build-backend/src/types/: config.rs  generated_recipe.rs  mod.rs  platform.rs  project_model.rs  python_params.rs  recipe.rs
py-pixi-build-backend/tests/: conftest.py
py-pixi-build-backend/tests/data/: boltons_recipe.yaml
py-pixi-build-backend/tests/unit/: test_generated_recipe.py  test_intermediate_recipe.py  test_logging.py  test_platform.py  test_project_model.py
py-pixi-build-backend/tests/unit/__snapshots__/: test_intermediate_recipe.ambr  test_project_model.ambr
recipe/: pixi-build-api-version.yaml  pixi-build-cmake.yaml  pixi-build-interface.yaml  pixi-build-mojo.yaml  pixi-build-mutex.yaml  pixi-build-py-pixi-build-backend.yaml  pixi-build-python.yaml  pixi-build-rattler-build.yaml  pixi-build-rust.yaml  pixi_build_cmake.yaml  pixi_build_python.yaml  pixi_build_rattler_build.yaml  recipe.yaml  variants.yaml
scripts/: build.py  generate-matrix.py  generate-version-matrix.py  generate_version_matrix.py  release.py
(+120 files in other folders)
