[package]
name = "py-pixi-build-backend"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "pixi_build_backend"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.24", features = [
  "extension-module",
  "abi3-py38",
  "serde",
  "py-clone",
  "experimental-async",
] }

pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"] }

# Core pixi-build dependencies (local crates)  
pixi-build-backend.workspace = true
recipe-stage0.workspace = true

# Pixi types
pixi_build_types.workspace = true

# Core serialization and async support
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "rt"] }

rattler_conda_types.workspace = true

# Error handling
miette.workspace = true
thiserror.workspace = true

# We want to point to the latest known hash commit where rattler is not bumped yet
# and doesn't conflict with the pixi build types.
py-rattler = { git = "https://github.com/conda/rattler", rev = "ac1a946121f5b9d949e4b5f6229626795b00f39a" }

# Utilities
indexmap.workspace = true
pythonize = "0.24"
paste = "1.0.15"

[build-dependencies]
pyo3-build-config = "0.25"
