[package]
name = "pixi-build-r"
version = "0.1.0"
description = "R build backend for Pixi"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["rustls-tls"]
rustls-tls = ["pixi-build-backend/rustls-tls", "rattler-build/rustls-tls"]
native-tls = ["pixi-build-backend/native-tls", "rattler-build/native-tls"]

[dependencies]
fs-err = { workspace = true }
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true }
once_cell = { workspace = true }
pixi-build-backend = { workspace = true }
pixi_build_types = { workspace = true }
rattler-build = { workspace = true }
rattler_conda_types = { workspace = true }
recipe-stage0 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "redactions", "filters"] }
rstest = { workspace = true }
tempfile = { workspace = true }
strum = { workspace = true, features = ["derive"] }
