[package]
name = "pixi-build-rust"
version = "0.3.0"
edition.workspace = true

[dependencies]
indexmap = { workspace = true }
miette = { workspace = true }
minijinja = { workspace = true, features = ["json"] }
rattler_conda_types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros"] }

pixi-build-backend = { workspace = true }
pixi_build_types = { workspace = true }

recipe-stage0 = { workspace = true }


[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml", "redactions", "filters"] }
rstest = { workspace = true }
temp-env = "0.3.6"
